# e-commerce

./: .gitignore  pyproject.toml
ecommerce/ecommerce/: settings.py  urls.py
ecommerce/store/: admin.py  models.py  views.py
ecommerce/store/migrations/: 0001_initial.py
