[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = "e-commerce"
authors = ["Denys Volyntsev <denysvolyntsev@gmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
